--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -17,7 +17,7 @@
 # install surge
 - name: Install Surge
   run: np install --global surge
-
+#build app
 - name: Build React App
   run: yarn build
 
