--- a/.github/workflows/Deploy_Surge.yml
+++ b/.github/workflows/Deploy_Surge.yml
@@ -1,27 +1,23 @@
-# Install NodeJS
-- name: Install NodeJS
+--- 
+- 
+  name: "Install NodeJS"
   uses: actions/setup-node@v2-beta
-  with:
+  with: 
     node-version: 12
-
-# Install Yarn
-- name: Install Yarn
+- 
+  name: "Install Yarn"
   uses: borales/actions-yarn@v2.0.0
-  with:
+  with: 
     cmd: install
-
-# Build react app with yarn
-- name: build react app
-  run: yarn build
-  
-# install surge
-- name: Install Surge
-  run: np install --global surge
-#build app
-- name: Build React App
-  run: yarn build
-
-# deploy surge
-- name: Deploy react app to surge
-  run: surge ./build project002-shahjahansamoon.surge.sh --token ${{ secrets.surge_token }} 
-   
+- 
+  name: "build react app"
+  run: "yarn build"
+- 
+  name: "Install Surge"
+  run: "np install --global surge"
+- 
+  name: "Build React App"
+  run: "yarn build"
+- 
+  name: "Deploy react app to surge"
+  run: "surge ./build project002-shahjahansamoon.surge.sh --token ${{ secrets.surge_token }}"
